--- a/index.html
+++ b/index.html
@@ -23,17 +23,10 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
+  
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Ninestars - v4.3.0
-  * Template URL: https://bootstrapmade.com/ninestars-free-bootstrap-3-theme-for-creative/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -69,7 +62,7 @@
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Python, is it the fastest growing programming language around?</h1>
           <h2>Python is a popular programming language that’s being adopted at a fast pace. It’s loved largely due to its simpler syntax, wide applications, and high demand. </h2>
-          
+   <img src="https://cdn.statcdn.com/Infographic/images/normal/21017.jpeg" height=100% width=100%/>       
           <div>.
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
