--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
+  <img src="https://cdn.statcdn.com/Infographic/images/normal/21017.jpeg" height=100% width=100%/>    
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
