--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
             <h3>Pallavi</h3>
             <p>
               DAV Public School ,Srestha Vihar ,Delhi <br>
-              Delhi, Dl 110092<br>
+              Delhi, 110092<br>
               India <br><br>
-              <strong>Phone:</strong> +91 709133****<br>
+              <strong>Phone:</strong> +91 7091******<br>
               <strong>Email:</strong> bhardwajqueen7051@gmail.com<br>
             </p>
           </div>
